@@ -11,7 +11,6 @@ import shop.yesaladin.shop.publish.dto.PublisherResponseDto;
 import shop.yesaladin.shop.publish.exception.PublisherNotFoundException;
 import shop.yesaladin.shop.publish.service.inter.QueryPublisherService;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -96,7 +95,7 @@ class QueryPublisherServiceImplTest {
         String name1 = "출판사1";
         String name2 = "출판사2";
 
-        List<Publisher> publishers = Arrays.asList(
+        List<Publisher> publishers = List.of(
                 Publisher.builder().name(name1).build(),
                 Publisher.builder().name(name2).build()
         );
